dodane zdjęcia do imagelist

--- a/SekretariatPAD/Form1.resx
+++ b/SekretariatPAD/Form1.resx
@@ -117,6 +117,87 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACQ
+        EAAAAk1TRnQBSQFMAgEBBwEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEAAf8CvALwARAC8QLy
+        AvMD9AL/ArwC8AEQAvEC8gLzA/QR/xAAAgcCvALwAvED8gLzAvQB/wIHArwC8AHxAbwB8QLyAvMC9AH/
+        AgcBvAPwAREBDwLyAvMD9AH/EAACBwO8AZIB8QGSAvEBvALzAvQB/wIHA7wBFAHxAesBkgHvARMB8gH0
+        AfMB7QH/AgcBvAHwAbwB8AHsAQ4B8QHyAQcB8wP0Af8QAAIHArwB7AEOAbwBFAH3AeoBEQLzAfQBBwH/
+        AgcBvAHqARQBQwHwAfgBDwERAQ4BQwFtAesBvAH/AgcBvAFtAbwB8AHqAQ8BkgHxAQ4B8wP0Af8QAAIH
+        AbwBkgHwAe8BbQIOAewBkgHvAm0B7wH/AgcBvAEUAQ4CvAHrAQADDwHwAvQB/wIHAbwBDgHwAbwBDgIV
+        Ae8BkgLzAvQB/xAAAgcBFAERAvABDgJDAfgB6gFtAfAB8wH0Af8CBwG8Ae8BAAEQAfAB7AEAAQ4BkgEU
+        AfMC9AH/AgcBvAEHAvACbQHxAgcC8wL0Af8QAAIHAgAB7wFtAQABDwFDAeoB8QHtAfMC9AH/AgcBvAHv
+        AQAB+AG8AfgBDgERAe8BbQHzAvQB/wIHArwBBwIRARUB8QGSAREC8wL0Af8QAAIHAe0BAAEVAgABEAFt
+        ARIC9wHzAvQB/wIHARIBFQEPAQcB6wETAQ4BAAFtARIB8wL0Af8CBwG8AQcBkgHsAe8B6gERAQcBDwLz
+        AvQB/xAAAgcBvAEOAfAB6gEAAQ4BbQH4AREBBwHzAvQB/wIHARQBDgFDAQABBwIOAQ8BDgHqAfMC9AH/
+        AgcBFAEAAbwBQwJtAeoB9wEOAvMC9AH/EAACBwG8AW0BvAEHARUCQwLvAfEB8wL0Af8CBwG8AW0B9wHt
+        Ae8B7AEOAZIBBwHqAfMD9AMHAQABvAEUAQAB8AEUAfIBbQEUA/QB/xAAAgcBvAFDAfAB6wEHAREB9wLx
+        AvMD9AIHAu8BvAHwAbwB6gEAAvIB6gHzA/QCBwEOAQcBkgEPAQcB8QK8AUMB8wEVAvQB/xAAAwcB+AG8
+        AQ8B8QEUAvIB8QLzA/QCBwEPAe8BvALwAUMBAALyAUMB8wP0AgcBEgG8Ae8BDwHwAfEB8gHxAQ8C8wEV
+        AfQB/xAAAwcDvAHwAfgB8QHyAfEC8wP0AgcBFAH3AbwC8AEHARIC8gFDAfMD9AIHArwB7wLwAvEB8gHx
+        A/MBEwH/EAADBwK8AvAC8QHyA/MD9AIHAZICvALwAfEB8APyAfMD9AMHAbwBBwLwAvEC8gLzAvQB/xAA
+        AwcBvAFtAvAC8QLyA/MC9AMHArwC8ALxAvID8wL0AgcDvALwAvEC8gLzA/QQAAMHAbwBEALwAvEC8gPz
+        AvQDBwK8AvAC8QLyA/MC9AIHA7wC8ALxAvIC8wP0EAABBwK8AvAC8QERA/IB8wP0Af8BBwK8AvAC8QER
+        A/IB8wP0Af8BBwK8AvAC8QERA/IB8wP0Av8CvALwARAC8QLyAvMD9AH/AgcDvAHwAfEBDgHxAfIB8QLz
+        AvQB/wIHA7wB8AHxAQ4B8QHyAfEC8wL0Af8CBwK8A/AC8QLyA/MBBwL/AQcEvAHwAvEB8gHxAvMC9AH/
+        AgcBvAHsAQ4B8AG8AQAB8QHwAQcB8AHzAvQB/wIHAbwC8AFtAbwBEAEHAe0C8wP0Af8CBwK8AfABFAHw
+        AewB7QHyARMC8wHsAfQC/wEHArwB9wEQAbwBFQHtAewBEAHyAfMC9AH/AgcBEAESAQABbQHwAQAB8gFt
+        AewB+AHzAvQB/wIHAbwBFAHwAQ4BDwEOAW0BEgLzA/QB/wIHAbwBEQHwAQ8BFAEOARUBkgEQAfIBEgL0
+        Av8BBwG8AREBDgFDAQcBDwEQAQ8BQwEUAfMC9AH/AgcBbQH4AQ4BAAHxARMBkgEOARABDwGSAfIB9AH/
+        AgcBQwEUAQcB7AIOARABEwHyAvMC9AH/AgcBvAEQAe8BEAIOAZIB7wHqAesB8wL0Av8BBwG8AQABEQK8
+        AewCDgHwARQB8wL0Af8DBwFtARABAAHtAeoB9wEPARABDwEHAewBbQH/AgcB7AIQAeoBDwIOAeoB8gHz
+        A/QB/wIHAbwBDwIOAg8CbQEOAvMC9AL/AQcBvAESAeoC8AH4AW0BDgHyAeoB8wL0Af8CBwG8AeoBFQEQ
+        AeoBvAHyAhABDgHzAvQB/wIHAbwBBwHsAgACDgESAfIC8wL0Af8CBwG8AgACDwH3ArwBDgLzAvQC/wEH
+        AbwB7AEHAvABEAHrAQ8B8gFtAfMC9AH/AgcBvAFDARMBEQHwAvEBbQEOAREB8wL0Af8CBwG8AewBBwEO
+        AgABDgHqAfgB8gHzAvQB/wIHARIBEQEQARMBEAEHARIB7wFtAvMC9AL/AQcBvAHqAbwB9wHwARMBEgEP
+        Ae0B6wHzAvQB/wIHAbwBDgEPAbwB7wHxAe8BvAHqAW0D9AH/AgcBvAEQAe8BBwEOAW0BAAETAQ4B6gHz
+        AvQB/wIHARQBEQH3ARMBDwFtARQB8gEOAvMC9AL/AQcBvAEOAW0BDgH4AQcBFAEQAQ8B+AHzAvQB/wIH
+        AbwB7QEPAfABkgHxAQcD8gHzA/QDBwHqAe8BBwERAfABFQHqARIBQwHzAvQB/wMHAbwB8AETAQ4BEgEH
+        AfEBDgLzAvQC/wIHARQB+AEHAe8BQwESAUMBvAHrAfMD9AIHAbwB6wEVAvAC8QLyAvMD9AIHAREBvAHw
+        AQ4BvAHxAbwB8gHsARIB8wL0Af8CBwERAewBvAIVAZIC7AEAAvMC9AL/AQcB7wEVAvABBwEOAW0BDwHy
+        AW0B8wP0AgcBvAEPAQcC8ALxAvIC8wP0AgcB7AG8AfABEwPxAvIB7wEVAfMB9AH/AgcBFAEAAe8BbQER
+        AfEBEAHvAesC8wL0Av8BBwEOAZIBvALwAesB8QEOAe8BEgHzA/QEBwPwAvEC8gLzA/QCBwK8A/AC8QLy
+        AfMB8gEQAfIB/wIHAbwBkgH3AfABvAHxAewB8QHyAvMC9AL/AQcBEgK8AvAC8QETAfcBQwLzAvQCBwES
+        ArwC8ALxAvID8wL0AwcCvALwAvEC8gPzAQ4B9AIHA7wB8ALxAvID8wP0Af8BBwHrArwC8APxAfIB8AES
+        AfIC9AIHAQ8CvALwAvEC8gPzAvQCBwO8AvAC8QLyAvMD9AIHA7wC8ALxAvIC8wP0Af8BBwEAArwC8ALx
+        AvIC8wEVAfIB9BD/AgcDvALwAvEC8gLzA/QCBwO8AvAC8QLyAvMD9AH/AQcB6wK8AvAC8QLyAvMB9AH4
+        AfQBQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEBFgAD//8AAgAL
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
